# mine-duel

./: MAGICBLOCK-PLAYBOOK.MD  README.md
client/demo-scene/: Demo.gltf
client/fps-boilerplate/: .env.local  ASSET_FLOW.md  CLIENT-GAMEPLAY-ARCHITECTURE.MD  DIGGERS_UNITY6_FIRST_PERSON_CONTROLLER_REFERENCE.md  EDITOR_WORKFLOW.md  FIRST_PERSON_CONTROLLER_ALIGNMENT.md  README.md  index.html  mineable area.glb  package-lock.json  package.json
client/fps-boilerplate/public/maps/: default-map.v1.json
client/fps-boilerplate/scripts/: verify-no-editor-in-dist.mjs
client/fps-boilerplate/src/: main.js  router.js  style.css
client/fps-boilerplate/src/dev/: editorBootstrap.js
client/fps-boilerplate/src/runtime/: atmosphereRuntime.js  blockworldStyleRuntime.js  firstPersonControllerRuntime.js  mapRuntime.js  postProcessRuntime.js  streamRuntime.js  voxelRuntime.js
client/fps-boilerplate/src/ui/: ninepatch.css
client/fps-boilerplate/src/views/: lobby.css  lobby.js
client/fps-boilerplate/src/wallet/: walletGateway.js
references/ModularFirstPersonController/FirstPersonController/: FirstPersonController.cs
smart-contract/: ARCHITECTURE.MD  Anchor.toml  ONCHAIN-VERIFICATION.MD  package-lock.json  package.json
smart-contract/programs/mine-duel/: Cargo.toml
smart-contract/programs/mine-duel/src/: lib.rs
smart-contract/scripts/: devnet_e2e.cjs  devnet_smoke.cjs
smart-contract/tests/: mine_duel.ts
smart-contract/verification/: devnet_e2e_latest.json
smart-contract/wallets/: deployer.json  player1.json  player2.json  smoke_creator.json  smoke_creator2.json
(+4 files in other folders)
